feat: Add BotPlatformApplication run configuration and refactor code for improved logging and error handling
* Introduced a new run configuration for BotPlatformApplication.
* Changed method visibility from private to public for init methods in BotPlatformApplication and EducationCache.
* Updated imports from `org.apache.commons.lang` to `org.apache.commons.lang3` across multiple files.
* Enhanced error handling by replacing print stack traces with logger error messages in various processors.
* Fixed variable name typos and improved code readability in several classes.